--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming di RumahRafif.</title>
+    <title>Website Mrcll</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href=''>RumahRafif.</a></div>
+            <div class="logo"><a href=''>Mrcll.</a></div>
             <div class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -27,10 +27,10 @@
         <section id="home">
             <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
             <div class="kolom">
-                <p class="deskripsi">Belajar Programming #dirumahaja</p>
+                <p class="deskripsi">Belajar coding #dirumahaja</p>
                 <h2>Tetap Sehat, Tetap Semangat</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, nobis.</p>
-                <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
+                <p><a href="#" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
             </div>
         </section>
 
@@ -41,7 +41,7 @@
                 <h2>Online Courses</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed deserunt voluptatibus possimus blanditiis reiciendis. Qui, facilis! Delectus exercitationem dolores sapiente?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed deserunt voluptatibus possimus blanditiis reiciendis. Qui, facilis! Delectus exercitationem dolores sapiente?</p>
-                <p><a href="" class="tbl-biru">Pelajari Lebih Lanjut</a></p>
+                <p><a href="#" class="tbl-biru">Pelajari Lebih Lanjut</a></p>
             </div>
             <img src="https://img.freepik.com/free-vector/online-learning-isometric-concept_1284-17947.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
         </section>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Social</h3>
-                    <p><b>YouTube: </b>Programming di RumahRafif</p>
+                    <p><b>YouTube: </b>Programming di Mrcll</p>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
 
     <div id="copyright">
         <div class="wrapper">
-            &copy; 2020. <b>RumahRafif.</b> All Rights Reserved.
+            &copy; 2020. <b>Mrcll.</b> All Rights Reserved.
         </div>
     </div>
     
